--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,6 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 tokio = { version = "1.45.1", features = ["full"] }
 tokio-util = "0.7.15"
+toml = "0.9.1"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
-url = "2.5.4"
