--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 bollard = "0.19.0"
+dirs = "6.0.0"
 futures-core = "0.3.31"
 regex = "1.11.1"
 serde = { version = "1.0.219", features = ["derive"] }
