--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2024"
 bollard = "0.19.0"
 dirs = "6.0.0"
 futures-core = "0.3.31"
-regex = "1.11.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
+sysinfo = "0.36.1"
 tokio = { version = "1.45.1", features = ["full"] }
 tokio-util = "0.7.15"
 toml = "0.9.1"
