feat!: implement multiple proxy to same project and rename to lspdock
- Renamed all instances of "lsproxy" to "lspdock" in code, docs, and config paths
- Updated config file name and directory to lspdock.toml and ~/.config/lspdock/
- Changed log file paths to /tmp/lspdock_trace.log and Windows equivalent
- Updated README and ides.md to reflect new name and usage instructions
- Refactored patch_pid config to accept a list of executables
- Added support for --exec argument to override executable for multi-LSP projects
- Updated code comments and debug output to use lspdock naming

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Package artifact
         run: |
           mkdir -p dist
-          BIN=lsproxy
+          BIN=lspdock
           EXT=""
           ARCHIVE_EXT="tar.gz"
           if [[ "${{ matrix.target }}" == *windows* ]]; then
@@ -85,8 +85,8 @@ jobs:
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
-          name: lsproxy-${{ matrix.target }}
-          path: dist/lsproxy-${{ matrix.target }}.*
+          name: lspdock-${{ matrix.target }}
+          path: dist/lspdock-${{ matrix.target }}.*
 
   release:
     needs: build
