--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,7 @@ name: Cross Build and Test
 
 on:
   push:
-    tags:
-      - 'v*'
+    tags: ["v*"]
   workflow_dispatch:
 permissions:
   contents: write
@@ -13,14 +12,21 @@ jobs:
     strategy:
       matrix:
         include:
-          # Linux + Windows on Ubuntu (use cross)
+          # Linux (GNU) via cross (keep if you need glibc)
           - target: x86_64-unknown-linux-gnu
             runner: ubuntu-latest
             use_cross: true
+          # Or prefer MUSL to avoid glibc headaches:
+          # - target: x86_64-unknown-linux-musl
+          #   runner: ubuntu-latest
+          #   use_cross: true
+
+          # Windows (GNU) via cross
           - target: x86_64-pc-windows-gnu
             runner: ubuntu-latest
             use_cross: true
-          # macOS on macOS (native)
+
+          # macOS native
           - target: aarch64-apple-darwin
             runner: macos-latest
             use_cross: false
@@ -42,13 +48,17 @@ jobs:
         if: ${{ matrix.use_cross }}
         run: cargo install cross
 
+      - name: Clean before cross to avoid glibc mix
+        if: ${{ matrix.use_cross }}
+        run: cargo clean
+
       - name: Run tests (except on Windows)
         if: ${{ !contains(matrix.target, 'windows') }}
         run: |
           if [ "${{ matrix.use_cross }}" = "true" ]; then
-            cross test --target ${{ matrix.target }}
+            cross test --locked --target ${{ matrix.target }} -v
           else
-            cargo test --target ${{ matrix.target }}
+            cargo test --locked --target ${{ matrix.target }} -v
           fi
 
       - name: Warn about skipped Windows tests
@@ -58,9 +68,9 @@ jobs:
       - name: Build release binary
         run: |
           if [ "${{ matrix.use_cross }}" = "true" ]; then
-            cross build --release --target ${{ matrix.target }}
+            cross build --locked --release --target ${{ matrix.target }} -v
           else
-            cargo build --release --target ${{ matrix.target }}
+            cargo build --locked --release --target ${{ matrix.target }} -v
           fi
 
       - name: Package artifact
@@ -92,15 +102,12 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/v')
-
     steps:
       - name: Download all build artifacts
         uses: actions/download-artifact@v4
         with:
           path: dist
-
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           files: dist/**/*
-
