--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: Setup Rust toolchain
         uses: actions-rust-lang/setup-rust-toolchain@v1
@@ -39,6 +39,9 @@ jobs:
           toolchain: stable
           target: ${{ matrix.target }}
           components: rustfmt
+
+      - name: Rustfmt Check
+        uses: actions-rust-lang/rustfmt@v1
 
       - name: Install cross (Ubuntu only)
         if: ${{ matrix.use_cross }}
@@ -75,17 +78,15 @@ jobs:
           BIN=lspdock
           EXT=""
           ARCHIVE_EXT="tar.gz"
+          COMPRESS_CMD="tar czf"
           if [[ "${{ matrix.target }}" == *windows* ]]; then
             EXT=".exe"
             ARCHIVE_EXT="zip"
+            COMPRESS_CMD="zip -r"
           fi
           cp target/${{ matrix.target }}/release/$BIN$EXT dist/
           pushd dist
-          if [[ "$ARCHIVE_EXT" == "zip" ]]; then
-            zip -r "${BIN}-${{ matrix.target }}.zip" "$BIN$EXT"
-          else
-            tar czf "${BIN}-${{ matrix.target }}.tar.gz" "$BIN$EXT"
-          fi
+          eval $COMPRESS_CMD "${BIN}-${{ matrix.target }}.$ARCHIVE_EXT" "$BIN$EXT"
           popd
 
       - name: Upload build artifact
@@ -100,7 +101,7 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
       - name: Download all build artifacts
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v5
         with:
           path: dist
       - name: Create GitHub Release
