--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 dirs = "6.0.0"
 futures-core = "0.3.31"
+memchr = "2.7.6"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 sysinfo = "0.36.1"
