feat(config): add CLI arg parsing and fallback logic
- Add clap-based CLI parser with robust LSP passthrough fallback
- CLI args override config file fields for container, paths, exec, etc.
- Support `--` separator for unambiguous LSP argument forwarding
- Auto-detect executable name from binary for proxy replacement
- Refactor config loading to merge CLI and file sources
- Remove encoded_local_path; use local_path normalization and encoding
- Update Windows path handling and binary name extraction
- Add fallback to local LSP if Docker attach fails
- Update docs and examples for new CLI usage and argument precedence

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "lspdock"
-version = "0.1.8"
+version = "0.2.0"
 edition = "2024"
 
 [dependencies]
+clap = { version = "4.5.53", features = ["derive"] }
 dirs = "6.0.0"
 futures-core = "0.3.31"
 memchr = "2.7.6"
