--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,12 +82,57 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/v')
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v5
+        with:
+          fetch-depth: 0  # Fetch all history for changelog generation
+      
       - name: Download all build artifacts
         uses: actions/download-artifact@v5
         with:
           path: dist
-
+      
+      - name: Generate release notes
+        id: release_notes
+        run: |
+          # Get the previous tag
+          PREV_TAG=$(git tag --sort=-v:refname | sed -n '2p')
+          CURRENT_TAG=${GITHUB_REF#refs/tags/}
+          
+          # Generate changelog
+          if [ -z "$PREV_TAG" ]; then
+            # First release - use all commits
+            CHANGELOG=$(git log --pretty=format:"- %s (%h)" --no-merges)
+          else
+            # Generate changelog between tags
+            CHANGELOG=$(git log ${PREV_TAG}..${CURRENT_TAG} --pretty=format:"- %s (%h)" --no-merges)
+          fi
+          
+          # Create release notes
+          cat > release_notes.md << EOF
+          ## What's Changed
+          
+          ${CHANGELOG}
+          
+          ## Installation
+          
+          Download the appropriate binary for your platform:
+          - **Linux (x86_64)**: \`lspdock-x86_64-unknown-linux-gnu.tar.gz\`
+          - **Windows (x86_64)**: \`lspdock-x86_64-pc-windows-gnu.zip\`
+          - **macOS (Apple Silicon)**: \`lspdock-aarch64-apple-darwin.tar.gz\`
+          
+          Extract and place the binary in your PATH.
+          
+          **Full Changelog**: https://github.com/${{ github.repository }}/compare/${PREV_TAG}...${CURRENT_TAG}
+          EOF
+          
+          echo "Generated release notes"
+      
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           files: dist/**/*
+          body_path: release_notes.md
+          draft: false
+          prerelease: false
+          generate_release_notes: false
